public/style.css
.nav-logo {
  height: auto !important;
  max-height: 40px !important;
  width: auto !important;
}

.nav-tabs-item img,
.nav-tabs-item .nav-logo {
  background: transparent !important;
  background-color: transparent !important;
}

/* Table Styling */
table {
  --border-color: #e5e7eb;
  --bg-color-even: #dedede;
  --bg-color-hover: #f3f4f6;

  &:is(.dark *) {
    --border-color: #374151;
    --bg-color-even: #1f2937;
    --bg-color-hover: #374151;
  }

  table-layout: auto;
  border-collapse: collapse;
  width: 100%;
  margin: 1rem 0;

  th,
  td {
    text-align: left;
  }

  td {
    border: 1px solid var(--border-color);
  }

  tbody {
    border: 1px solid var(--border-color);

    tr {
      &:nth-child(even) {
        background-color: var(--bg-color-even);
      }

      &:hover {
        background-color: var(--bg-color-hover);
      }
    }
  }
}

.prose table th,
.prose table td {
  padding: 0.5rem 1rem 0.5rem 1.5rem;
}

/* Large Screen Max Width */
@media (min-width: 1600px) {
  .\32xl\:max-w-2xl {
    max-width: 70%;
  }
}

